Mon Apr 24 17:20:14 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* locate_kdc.c (krb5_locate_kdc): Don't deref NULL pointer
	returned from profile_get_values if profile is not set.

Sat Apr 22 00:11:12 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in, configure.in, t_std_conf.c: Add test program to
		test the standard configuration krb5 routines.

	* osconfig.c: Don't define krb5_kdc_udp_portname and
		krb5_kdc_sec_portname any more.	 There's no real point...

	* hst_realm.c (krb5_get_krbhst): Strip off the trailing dot from
		the hostname if present.

	* locate_kdc.c (krb5_locate_kdc): Use the profile code to get the
		list of Kerberos servers (plus port numbers) for a
		particular realm from [realms]/<realm>/kdc

Fri Apr 21 11:38:45 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* def_realm.c (krb5_get_default_realm): Use the profile code to
		get the default realm from [libdefaults]/default_realm.

	* get_krbhst.c (krb5_get_krbhst): Use the profile code to get the
		list of Kerberos servers for a particular realm from 
		[realms]/<realm>/kdc

	* realm_dom.c (krb5_get_realm_domain):	Use the profile code to
		get the default domain postfix for a realm (used only to
		convert V4 -> V5 principals) from 
		[realms]/<realm>/default_domain

	* hst_realm.c (krb5_get_host_realm): Use the profile code to get
		the default realm given a particular host from
		[domain_realm]/<host|domain>

	* init_os_ctx.c (krb5_os_init_context): When the OS context is
		initialized, also initialize the profile file.	This loads
		in the /etc/krb5.conf file.

Wed Apr 19 13:50:19 1995  Ezra Peisach	(epeisach@kangaroo.mit.edu)

	* def_realm.c: (krb5_get_default_realm) - remove global default realm.
		Moved into the context. (krb5_set_default_realm) added.

Fri Apr 14 22:15:00 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* an_to_ln.c (dbm_an_to_ln): Don't compile dbm_an_to_ln() if
		USE_DBM_LNAME isn't defined.

Fri Apr 14 15:15:48 1995    <tytso@rsx-11.mit.edu>
